# ADIT

./: .gitignore  README.md  adit.py  citation_ingestion.py  cli.py  pyproject.toml  requirements.txt
.github/workflows/: live-canary.yml  tests.yml
examples/: adit-as-theory.config.yml  online-ingestion.config.yml  sdt.config.yml
plans/: plan-exhaustiveL1CiterCoverage.prompt.md  plan-ingestionProgressMessaging.prompt.md  plan-internetCitationIngestion.prompt.md  plan-l3ToL3EdgeIngestionExpansion.prompt.md  plan-readmeRestyle.prompt.md  plan-transientCheckpointRetryResume.prompt.md  untitled:plan-reduceOpenAlex404CliNoise.prompt.md
tests/: conftest.py  test_build_ecosystem.py  test_citation_ingestion.py  test_classifier_methods.py  test_cli.py  test_edge_cases.py  test_exception_handling.py  test_extract_features.py  test_integration.py  test_l3_to_l3.py  test_live_ingestion_canary.py  test_merge_papers.py  test_normalization_edge_cases.py  test_parallel_ingestion.py  test_semantic_similarity_robustness.py  test_theory_acronym_variations.py
